# benchmarks

common/: barrier.c  config.h  simpletest.c  simpletest.h  timer.c  util.c  util.h
phd_project_doitgen/: app  avg.pl  avg_runtime.pl  barrier.h  dse_optimized.txt  dse_unoptimized.txt  test.h  test.pl  timer.c  tmp.c
phd_project_dotproduct/: app  avg.pl  avg_runtime.pl  clog  cmds  dse_optimized.txt  dse_unoptimized.txt  ll  omx_packet.h  opti_log  simpletest.c  test.c  test.h  test.pl  unopti_log
phd_project_edge_detect/: app  avg.pl  avg_runtime.pl  dse_optimized.txt  dse_unoptimized.txt  log  log1  log2  log3  log4  log_small  test.h  test.pl
phd_project_floydwarshall/: a9_neon_optimized  a9_optimized  app  avg.pl  avg_runtime.pl  dse_optimized.txt  dse_unoptimized.txt  dsp_optimized  m3_optimized  t.pl  test.c  test.h  test.pl
phd_project_histo/old/: Makefile  Makefile.am  Makefile.in  bak_simpletest.c  barrier.c  barrier.h  config.h.in  config.status  configure  dmabuftest  explore.pl  libtool  parse.pl  simpletest  simpletest.c  simpletest.h  test1.c  test1.h  test1.pl  timer.c  timer.h
phd_project_histo/old/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
phd_project_histo/old/scripts/: log  remote_setup.pl  run.pl  run_all.pl  search_dsp.pl  search_m3.pl  setup.pl
phd_project_histo/old/scripts/other_scripts/: search_m3.pl  template_simpletest.c
phd_project_histo/old/util/: Makefile  Makefile.in  display-kms.c  libutil.la  libutil_la-demux.lo  libutil_la-display-kms.lo  libutil_la-display-x11.lo  libutil_la-util.lo  util.c
(+149 files in other folders)
